--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,17 +24,28 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   cloud_firestore: ^0.13.5
-  permission_handler: ^5.0.0+hotfix.5
   firebase_auth: ^0.16.0
   google_sign_in: ^4.4.4
   shimmer: ^1.1.1
   gradient_app_bar: ^0.0.1
   emoji_picker: ^0.1.0
+  image_picker: ^0.6.6+1
+  path_provider: ^1.6.8
+  firebase_storage: ^3.1.5
+  provider: ^4.1.2
+  cached_network_image: ^2.2.0+1
+  permission_handler: 3.0.0
+  agora_rtc_engine: ^1.0.8
+  flutter_launcher_icons: "^0.7.5"
    
-dev_dependencies:
+dev_dependencies:    
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path : "assets/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -48,8 +59,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - icon.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
